2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Check structure depth when decoding.
	* src/bencode.cc
	* src/bencode.h
	* test/BencodeTest.cc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented tellStopped XML-RPC method in man page.
	* doc/aria2c.1.txt

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tellStopped XML-RPC method to aria2rpc.
	* doc/xmlrpc/aria2rpc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tellStopped XML-RPC method. This method returns stopped
	download in the specified range. It takes same parameters with
	tellWaiting XML-RPC method. offset = 0 means the oldest download.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-12-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use AI_ADDRCONFIG flag if it is available. Refactored so that
	getaddrinfo calls are not scattered around. Unset AI_ADDRCONFIG
	when conducting unit tests because they fail if networking
	interface is not configured with IPv4 address.
	* src/NameResolver.cc
	* src/SocketCore.cc
	* src/SocketCore.h
	* src/a2netcompat.h
	* test/AllTest.cc

2009-12-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed unit test error
	* test/UTMetadataPostDownloadHandlerTest.cc

2009-12-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined static string constants for efficiency.
	* src/XmlRpcMethodImpl.cc

2009-12-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-save-metadata option. When true is given, it saves
	metadata as .torrent file. This option has effect only when
	BitTorrent Magnet URI is used.  The filename is name in metadata
	with suffix .torrent. The directory to be saved is the same
	directory where download file is saved. If the same file already
	exists, metdata is not saved.
	* src/OptionHandlerFactory.cc
	* src/UTMetadataPostDownloadHandler.cc